- bugs with PIL - config

--- a/configs/painter_by_numbers.yaml
+++ b/configs/painter_by_numbers.yaml
@@ -3,13 +3,13 @@
 # (https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode).
 
 # logger options
-image_save_iter: 2500         # How often do you want to save output images during training
+image_save_iter: 2000         # How often do you want to save output images during training
 image_display_iter: 100       # How often do you want to display output images during training
 snapshot_save_iter: 5000      # How often do you want to save trained models
-log_iter: 1                   # How often do you want to log the training stats
+log_iter: 20                   # How often do you want to log the training stats
 
 # optimization options
-max_iter: 100000              # maximum number of training iterations
+max_iter: 1000000              # maximum number of training iterations
 weight_decay: 0.0001          # weight decay
 lr_gen: 0.0001                # learning rate for the generator
 lr_dis: 0.0001                # learning rate for the discriminator
@@ -34,7 +34,7 @@ dis:
 
 # data options
 num_workers: 4
-batch_size: 4
+batch_size: 8
 new_size: 140                 # first resize the shortest image side to this size
 crop_image_height: 128        # random crop image of this height
 crop_image_width: 128         # random crop image of this width
