--- a/configs/painter_by_numbers.yaml
+++ b/configs/painter_by_numbers.yaml
@@ -5,18 +5,18 @@
 # logger options
 image_save_iter: 2000         # How often do you want to save output images during training
 image_display_iter: 100       # How often do you want to display output images during training
-snapshot_save_iter: 5000      # How often do you want to save trained models
+snapshot_save_iter: 2000      # How often do you want to save trained models
 log_iter: 20                   # How often do you want to log the training stats
 
 # optimization options
-max_iter: 1000000              # maximum number of training iterations
+max_iter: 500000              # maximum number of training iterations
 weight_decay: 0.0001          # weight decay
 lr_gen: 0.0001                # learning rate for the generator
 lr_dis: 0.0001                # learning rate for the discriminator
 init: kaiming                 # initialization [gaussian/kaiming/xavier/orthogonal]
 gan_w: 1                      # weight of adversarial loss for image translation
 fm_w: 1                       # weight on distance between gan features of style and translated image
-r_w: 0.1                      # weight of image reconstruction loss
+r_w: 0.3                      # weight of image reconstruction loss
 
 # model options
 gen:
@@ -30,15 +30,15 @@ gen:
 dis:
   nf: 64                      # base number of filters
   n_res_blks: 10              # number of residual blocks in the discriminator
-  num_classes: 1584            # number of classes in the training set
+  num_classes: 173            # number of classes in the training set
 
 # data options
 num_workers: 4
-batch_size: 8
+batch_size: 16
 new_size: 140                 # first resize the shortest image side to this size
 crop_image_height: 128        # random crop image of this height
 crop_image_width: 128         # random crop image of this width
 data_folder_train: ./datasets/train
-data_list_train: ./datasets/train.csv
+data_list_train: ./datasets/new_train.csv
 data_folder_test: ./datasets/train
-data_list_test: ./datasets/test.csv
+data_list_test: ./datasets/new_train.csv
